fixed input border not appearing on mobile

--- a/src/routes/login/login.css
+++ b/src/routes/login/login.css
@@ -22,10 +22,8 @@
 input {
   font-size: 20px;
   border-radius: 10px;
-  box-shadow: 0px 0px 5px;
   width: 200px;
   max-width: 80%;
-  border: none;
   margin: 5px
 }
 
